--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     donates to orphans and the less privilleged children.We provide educational
     assets and other amenities that these cherised ones need but are not
     available to thier disposal.."/>
-    <link rel="stylesheet" href="/assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Daniel Impact Network | Donating to orphans and the less privilleged</title>
   </head>
