--- a/index.html
+++ b/index.html
@@ -168,6 +168,6 @@
       
     </div>
 </footer>
-    <script src="/assets/js/app.js" type="module"></script>
+    <script src="assets/js/app.js" type="module"></script>
   </body>
 </html>
