--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width;initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Daniel Impact Network is an NGO that
     donates to orphans and the less privilleged children.We provide educational
     assets and other amenities that these cherised ones need but are not
