--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
    <ul>
      <li style="list-style-type:none">Kasoa-Domeabra Obom Road</li>
           <li style="list-style-type:none">GS</li>
-               <li style="list-style-type:none;margin :10px; color : hsla(311.5,77.3%,50%,0.957)">Tel : +233 000 000 9999</li>
-                    <li style="list-style-type:none">Email : test@gmail.com</li>
+               <li style="list-style-type:none;margin :10px; color : var(--text);">Tel : <bold>(+233)556-016-254</bold></li>
+                    <li style="list-style-type:none">Email Us On : danielimpactn@gmail.com</li>
    </ul>
      </div>
     
