--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
      <li style="list-style-type:none">Kasoa-Domeabra Obom Road</li>
           <li style="list-style-type:none">GS</li>
                <li style="list-style-type:none;margin :10px; color : var(--text);">Tel : <bold>(+233)556-016-254</bold></li>
-                    <li style="list-style-type:none">Email Us On : danielimpactn@gmail.com</li>
+                    <li style="list-style-type:none">Email: danielimpactn@gmail.com</li>
    </ul>
      </div>
     
