--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="branding">
           <img src="assets/images/logo.PNG">
           <div
-          style="font-family:var(--fm);font-size:var(--f-exm);color:hsla(34.1,96%,46.7%,0.957);">Daniel
+          style="font-family:var(--fm);font-size:var(--f-exm);color:var(--secondary);">Daniel
           Impact Network</div>
     </div>
    <ul>
